# Streamlit_app

./: app.py
agent_youtuber/: README.md  pyproject.toml  requirements.txt
agent_youtuber/src/project/: men.py
agent_youtuber/src/project/config/: agents.yaml  tasks.yaml
agent_youtuber/src/project/crews/teaching_crew/: teaching_crew.py
mind/: __main__.py  mane.py  pyproject.toml
mind/src/mind/: __init__.py  app.py
