[project]
name = "mind"
version = "0.1.0"
description = "Growth Mindset Challenge Application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.64.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.42.2",
    "matplotlib>=3.9.1,<3.10.0",
    "seaborn>=0.13.0",
]

[project.scripts]
GIAIC = "mind.app:run_app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
